--- a/trunk/package/win32/hsp3dish.htm
+++ b/trunk/package/win32/hsp3dish.htm
@@ -43,12 +43,18 @@
 
 		<h1 id="HISTORY">更新履歴</h1>
 		<pre>
-	2012/05/07 ver3.3a8
+	2012/05/08 ver3.3a8
+	iOS : ローカルストレージデータのbsave,bloadでオフセット値が反映しなかった不具合を修正
+	iOS : mes命令実行後に正しくカレントポジションが移動しない不具合を修正
+	iOS,android : line命令の座標が1ドットずれる不具合を修正
+	iOS,android : await,wait命令の待ち時間を正しく反映するように修正
+	android : ドキュメントの注意事項を追加
 	hsp3dh : ProgramFiles下でコマンドラインの実行に失敗する不具合を修正
 	hsp3dh : 新規プロジェクト作成に失敗することがある不具合を修正
 	hsp3dh : 新規プロジェクト作成後はビルドメニューに移行するように修正
 	hsp3dh : ndkビルド時の正常終了チェックを追加
 	hsp3dh : ビルド時のログを詳細に表示するように修正
+	hsp3rd : 最新版のテスト用ランタイムに更新
 
 	2012/04/17 ver3.3a7
 	HSP3Dish Heloperを同梱、android用のビルド支援機能を追加
