[HSP3Dish] button命令のサポートを追加(Windows,iOS) [HSP3Dish][iOS] 横画面サポートを追加 [HSP3Dish][iOS] await命令の待ち時間を微調整 [hsp3rd] 最新版のテスト用ランタイムに更新

--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -31,7 +31,8 @@
 		<li><a href="#UPDATE12">iHSP12の更新</a></li>
 		<li><a href="#UPDATE13">iHSP13の更新</a></li>
 		<li><a href="#UPDATE14">iHSP14の更新</a></li>
-		<li><a href="#UPDATE15">iHSP15の更新(new)</a></li>
+		<li><a href="#UPDATE15">iHSP15の更新</a></li>
+		<li><a href="#UPDATE16">iHSP16の更新(new)</a></li>
 		<li><a href="#NOTICE">iOS版の注意事項、制限</a></li>
 		<li><a href="#NEWVER">iOS版の更新予定</a></li>
 	</ol>
@@ -69,7 +70,7 @@
 	iOSフォルダには、HSP3Dishランタイム及びxcode用のサンプルプロジェクトが含まれています。
 
 	<ul>
-	<li>iHSP15フォルダ - HSP3Dishランタイム本体</li>
+	<li>iHSP16フォルダ - HSP3Dishランタイム本体</li>
 	<li>hspprojフォルダ - HSP3Dishサンプル(hsplogo.hsp)</li>
 	<li>blockフォルダ - ブロック崩しサンプル(block3.hsp)</li>
 	<li>gcubeフォルダ - iPad用、d3module使用サンプル(gcube.hsp)</li>
@@ -122,14 +123,14 @@
 
 	<h2 id="ADDHSP">HSP3Dish関連ファイルの登録</h2>
 	<p>
-	作成されたプロジェクトのフォルダと同じ階層に、「iHSP15」フォルダを配置してください。
+	作成されたプロジェクトのフォルダと同じ階層に、「iHSP16」フォルダを配置してください。
 	「iHSPxx」フォルダはアーカイブ内のiOSフォルダに同梱されています。
 	</p>
 	<img src="hsp3dish/s_menu.jpg" style="float:right;">
 	<img src="hsp3dish/s_folder.jpg"><br>
 	<p>
 	XCode上でプロジェクトに必要なファイルを追加してください。<br>
-	Fileメニューから、「Add Files to～」を選択し、「iHSP15」のフォルダ(下層も含む)を追加(Add)します。<br>
+	Fileメニューから、「Add Files to～」を選択し、「iHSP16」のフォルダ(下層も含む)を追加(Add)します。<br>
 	さらに、Windows上で作成されたCソースファイル(拡張子が.cppのファイル)を追加(Add)します。<br>
 	</p>
 	<p>
@@ -175,16 +176,16 @@
 	<h2 id="RUNPROJ">HSP3Dishの実行と設定</h2>
 	<p>
 	実際にHSP3Dishを実行させる場合は、HSPランタイムの初期化コードをAppDelegateに組み込む必要があります。
-	プロジェクトの作成時に自動的に生成される、AppDelegate.mファイルをエディタで開き編集します。
+	プロジェクトの作成時に自動的に生成される、AppDelegate.mファイルをエディタで開き編集するか、またはiOSフォルダのサンプルに含まれているAppDelegate.mファイルを上書きコピーしてご使用下さい。
 	</p>
 	<img src="hsp3dish/s_code2.jpg"><br>
 	<br>
 	<p>
 	冒頭の「#import "AppDelegate.h"」の下に以下のコードを追加してください。<br>
-	(「iHSP15」への相対パス指定によりクラス宣言を読み込んでいます)
+	(「iHSP16」への相対パス指定によりクラス宣言を読み込んでいます)
 	</p>
 	<pre>
-	    #import "../../iHSP15/Classes/HspView.h"
+	    #import "../../iHSP16/Classes/HspView.h"
 	</pre>
 	<p>
 	次に「- (BOOL)application:～{」のあるブロック内の「// Override point for customization after application launch.」行の直前に以下のコードを追加してください。<br>
@@ -237,6 +238,27 @@
 	(自前で画面クリアを行なう場合に、重複してクリアすることを避けるためのオプション設定になっています。)<br>
 	「color:0xffffff」は、クリアする色を指定するもので16進数によりRGBのコードを記述します。
 	</p>
+	<pre>
+	    [view dispRotate:1];
+	</pre>
+	<p>
+	この設定を追加することにより、画面全体を回転して表示させることが可能です。<br>
+	指定する値は、0～3の範囲で90度単位(時計回り)に回転の角度を指定することができます。
+	1または、3の場合は横長の画面になります。その場合は、画面の初期化サイズ(CGRectMakeで
+	指定する座標)もあらかじめ横長(480x320など)に設定しておく必要があります。
+	</p>
+	<pre>
+	    [view useAccelerometer:1.0f / 30.0f];
+	</pre>
+	<p>
+	この設定を追加することにより、加速度センサーの値を取得することが可能になります。<br>
+	指定する値は、センサーの読み取り間隔を設定します。上の設定では、30分の1秒単位に取得を行ないます。
+	加速度センサーの値は、システム変数のginfo_accx、ginfo_accy、ginfo_acczにそれぞれ
+	X,Y,Z軸の値が実数で代入されます。
+	これは、それぞれの座標軸の加速度を-1.0～+1.0の範囲で取得したものになります。<br>
+	加速度センサーを使用しない場合は、この設定を追加しないでください。センサー情報の取得により、余計なバッテリーを消費してしまいます。
+	Windows上など加速度センサーが使用できない環境では、0.0が取得されます。
+	</p>
 
 	<p>
 	タスク切替時には、HSPの実行を停止し処理を軽減させることを推奨します。
@@ -255,10 +277,6 @@
 	</pre>
 	<p>
 	既にサンプルには、これらのコードが含まれています。
-	iOSフォルダに含まれているAppDelegate.mファイルを上書きして頂いても構いません。
-	</p>
-
-	<p>
 	適切に設定を行なった上で、「Run」ボタンでビルド実行を行なってください。
 	HSP3Dishで作成したスクリプトが実行されるはずです。
 	</p>
@@ -376,6 +394,30 @@
 	</p>
 	</ul>
 
+	<h2 id="UPDATE15">iHSP16の更新</h2>
+	<p>
+	iOS版ランタイムver1.6では以下の更新を行なっています。
+	</p>
+	<ul>
+	<li>button命令のサポート</li><br>
+	<p>
+	button命令によるボタン処理をサポートしました。
+	ボタンの描画はredraw命令により描画タイミングが指定された時に実行されます。
+	stop命令などでタスクが停止している状態では、ボタンの描画が行なわれませんので注意してください。
+	</p>
+	<li>横画面描画のサポート</li>
+	<li>加速度センサーのサポート</li><br>
+	<p>
+	画面を回転して表示するための機能、及び加速度センサーのサポートを追加しています。
+	AppDelegate.mに必要な初期化を追加する必要があります。詳しくは、<a href="#RUNPROJ">HSP3Dishの実行と設定</a>をご覧ください。
+	</p>
+	<li>不具合の修正</li><br>
+	<p>
+	いくつかのマイナーな不具合修正を行なっています。
+	await命令がver1.5よりも正確な待ち時間で動作するよう修正しました。
+	</p>
+	</ul>
+
 	<h2 id="NOTICE">iOS版の注意事項、制限</h2>
 	<ul>
 	<li>入力可能な情報</li>
@@ -399,9 +441,10 @@
 	</p>
 	<li>画像サイズについて</li>
 	<p>
-	celload、picload命令などで読み込まれる画像が、2^nのサイズ、つまり縦・横のサイズが1,2,4,8,16,32,64,128,256,512であることが推奨されます。正方形である必要はありません。
-	(2^nでないサイズ読み込み時には、内部で変換を行なうためオーバーヘッドが発生します)
-	1024,2048,4096などの大きなサイズの画像は扱えない機種もあるので、推奨されません。
+	celload、picload命令などで読み込まれる画像の縦・横サイズが、2048を越えるものについては、正しく扱えない機種もあるので、推奨されません。
+	縦・横のサイズが2^nのサイズ、つまり1,2,4,8,16,32,64,128,256,512,1024でない画像を
+	読み込む時には、内部で変換を行なうため多少のオーバーヘッドが発生します。
+	(通常はそれほど気にする必要はありません。大量の画像を読み込む場合にCPUリソースが余計に必要となります)
 	</p>
 	<li>再生可能なサウンドファイルについて</li>
 	<p>
@@ -409,6 +452,14 @@
 	圧縮された音声ファイルについては、mmload命令で読み込んだ時点ですべての波形がメモリに展開されるため、多くの音楽を同時に読み込むことは推奨されません。
 	「.wav」「.mp3」については、Windows版のhsp3dishでサポートされている形式です。
 	「.caf」「.aac」形式は、Mac及びiOSでサポートされている形式です。
+	</p>
+	<li>アプリの終了について</li>
+	<p>
+	iOS版では、end命令によるアプリ終了は行なわれません(stop命令と同様の処理になります)。
+	iOSのアプリ製作ガイドラインでは、プログラム自身による終了を行なわないよう求めています。<br>
+	<a href="https://developer.apple.com/library/ios/#qa/qa2008/qa1561.html" target="_blank">https://developer.apple.com/library/ios/#qa/qa2008/qa1561.html</a><br>
+	Windowsと異なり、iOS上では、アプリを終了するという動作のないように作ることが
+	求められるので、注意をしてください。
 	</p>
 	</ul>
 
@@ -418,11 +469,8 @@
 	</p>
 	<ul>
 	<li>各種システム情報取得</li>
-	<li>画面の自動回転サポート</li>
 	<li>機種による画面サイズ動的変更のサポート</li>
-	<li>buttonを始めとする配置オブジェクトのサポート</li>
 	<li>サウンド再生時のボリュームコントロール</li>
-	<li>傾きセンサーの入力情報の取得</li>
 	<li>マルチタッチ入力情報の取得</li>
 	<li>http接続、ブラウザの呼び出しサポート</li>
 	<li>OBAQプラグイン機能のサポート</li>
