[HSP3Dish] sysinfo関数の一部サポートを追加(Windows,iOS,android) [HSP3Dish][iOS] 横画面サポートを追加 [HSP3Dish][iOS] 加速度センサーのサポートを追加 [HSP3Dish][iOS] await命令の待ち時間を微調整 [HSP3Dish][android] OpenSL/ESによるサウンドサポートを追加 [HSP3Dish][android] デフォルトでフルスクリーンになるように修正 [HSP3Dish][android] アプリの切り替え、テクスチャ復帰に対応 [HSP3Dish][android] exec命令によるタスク呼び出しに対応 [HSP3Dish][android] end命令によるタスク終了に対応 [HSP3Dish][android] HSP3DHにLogcatウインドゥ表示を追加 [hsp3rd] 最新版のテスト用ランタイムに更新

--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -394,7 +394,7 @@
 	</p>
 	</ul>
 
-	<h2 id="UPDATE15">iHSP16の更新</h2>
+	<h2 id="UPDATE16">iHSP16の更新</h2>
 	<p>
 	iOS版ランタイムver1.6では以下の更新を行なっています。
 	</p>
@@ -405,11 +405,15 @@
 	ボタンの描画はredraw命令により描画タイミングが指定された時に実行されます。
 	stop命令などでタスクが停止している状態では、ボタンの描画が行なわれませんので注意してください。
 	</p>
+	<li>sysinfo関数のサポート</li>
 	<li>横画面描画のサポート</li>
 	<li>加速度センサーのサポート</li><br>
 	<p>
 	画面を回転して表示するための機能、及び加速度センサーのサポートを追加しています。
-	AppDelegate.mに必要な初期化を追加する必要があります。詳しくは、<a href="#RUNPROJ">HSP3Dishの実行と設定</a>をご覧ください。
+	AppDelegate.mに必要な初期化を追加する必要があります。詳しくは、<a href="#RUNPROJ">HSP3Dishの実行と設定</a>をご覧ください。<br>
+	また、sysinfo関数によりOSバージョン及び、デバイス名を取得することが可能になりました。
+	sysinfo(0)で、「iOS 5.1.1」のような文字列を取得することができます。これにより、ソース中で現在動作しているOSやバージョンを判別可能です。<br>
+	sysinfo(2)で、「iPhone」のようなデバイス名を取得することができます。現在、sysinfo関数の他の項目はサポートされていません。
 	</p>
 	<li>不具合の修正</li><br>
 	<p>
@@ -450,8 +454,8 @@
 	<p>
 	拡張子が「.wav」「.mp3」「.caf」「.aac」のファイルに対応しています。
 	圧縮された音声ファイルについては、mmload命令で読み込んだ時点ですべての波形がメモリに展開されるため、多くの音楽を同時に読み込むことは推奨されません。
-	「.wav」「.mp3」については、Windows版のhsp3dishでサポートされている形式です。
 	「.caf」「.aac」形式は、Mac及びiOSでサポートされている形式です。
+	「.wav」「.mp3」は、Windows版を含めすべてのhsp3dishで幅広くサポートされている形式です。
 	</p>
 	<li>アプリの終了について</li>
 	<p>
