--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -28,8 +28,10 @@
 		<li><a href="#DHPROJ">プロジェクトのビルド</a></li>
 		<li><a href="#SAMPLE">サンプルプロジェクト</a></li>
 		<li><a href="#COMP">ソースのコンパイル</a></li>
-		<li><a href="#RUNPROJ">実機への転送と実行</a></li>
-		<li><a href="#NOTICE">android版の注意事項、制限</a></li>
+		<li><a href="#RUNPROJ">実機への転送と実行(new)</a></li>
+		<li><a href="#SYSINFO">システム情報の取得(new)</a></li>
+		<li><a href="#EXECTASK">タスク(アクティビティ)呼び出し(new)</a></li>
+		<li><a href="#NOTICE">android版の注意事項、制限(new)</a></li>
 		<li><a href="#NEWVER">android版の更新予定</a></li>
 	</ol>
 
@@ -41,7 +43,6 @@
 	<br>
 	このマニュアルでは、android版の利用方法、注意点などを説明していきます。
 	<br>
-	<b>現在、公開されているandroid版 HSP3Dishはプレビュー版であり、機能が足りない部分や調整中の項目を含んでいます。すべての環境での正常な動作を保証するものではないことをご了承下さい。</b>
 	<br>
 	現状ではandroid上で実行できるファイルをビルドするためには、開発のための環境設定を行なう必要があります。開発環境の構築に費用はかかりません。すべて無料で準備することができます。
 	これらは、Windows上で動作し、接続されているandroidデバイス上で動作の確認を行なうことができます。
@@ -211,7 +212,40 @@
 	<li><a href="http://www.adakoda.com/android/000242.html" target="_blank">実機でデバッグするには [逆引きAndroid入門]</a>
 	</ul><p>
 	実機への転送ができない場合でも、ビルドで生成されたapkファイルをネットやUSBメモリを経由して転送してインストールを行ない実行の確認をすることも可能です。
+	<br>
+	「Logcat」ボタンを押して実行ログを表示させることが可能です。実機に転送して実行した際の、HSPからのエラーや初期化メッセージを確認することができます。
 	</p>
+
+	<h2 id="SYSINFO">システム情報の取得</h2>
+	<p>
+	sysinfo関数によりOSバージョン及び、デバイス名を取得することが可能になりました。
+	sysinfo(0)で、「android 2.3.3」のような文字列を取得することができます。これにより、ソース中で現在動作しているOSやバージョンを判別可能です。<br>
+	また、sysinfo(2)で、デバイス名を取得することができます。現在、sysinfo関数の他の項目はサポートされていません。
+	</p>
+
+	<h2 id="EXECTASK">タスク(アクティビティ)呼び出し</h2>
+	<p>
+	exec命令により、他のタスク(アクティビティ)を呼び出すことが可能です。
+	</p>
+	<ul><pre>
+		exec "パッケージ名", 0, "クラス名"
+	</pre></ul>
+	<p>
+	２番目のパラメーター(実行モード)が0の場合は、「パッケージ名」「クラス名」により、
+	実行するタスクを指定します。
+	セキュリティの解除が必要な場合は、「AndroidManifest.xml」の<intent-filter>に起動するクラスを記述してください。
+	</p>
+	<p>
+	より手軽に実行する手段として、URIを指定してアプリを呼び出す方法があります。
+	</p>
+	<ul><pre>
+		exec "URI文字列", 16
+	</pre></ul>
+	<p>
+	たとえば、URIに「http://hsp.tv」を指定した場合は、規定のwebブラウザを開きURLとして表示します。
+	「tel:123456789」によりダイアラーを起動します。他にもOSがサポートする様々な呼び出し方法が存在します。
+	</p>
+
 
 	<h2 id="NOTICE">android版の注意事項、制限</h2>
 	<ul>
@@ -237,23 +271,27 @@
 	</p>
 	<li>画像サイズについて</li>
 	<p>
-	celload、picload命令などで読み込まれる画像が、2^nのサイズ、つまり縦・横のサイズが1,2,4,8,16,32,64,128,256,512であることが推奨されます。
-	(このサイズ以外であっても読み込み可能ですが、変換のための負荷が生じます)
-	縦・横サイズは、正方形である必要はありません。
-	1024,2048,4096などの大きなサイズの画像は扱えない機種もあるので、推奨されません。
+	celload、picload命令などで読み込まれる画像の縦・横サイズが、2048を越えるものについては、正しく扱えない機種もあるので、推奨されません。
+	縦・横のサイズが2^nのサイズ、つまり1,2,4,8,16,32,64,128,256,512,1024でない画像を
+	読み込む時には、内部で変換を行なうため多少のオーバーヘッドが発生します。
+	(通常はそれほど気にする必要はありません。大量の画像を読み込む場合にCPUリソースが余計に必要となります)
+	<br>
+	画像ファイルはプロジェクトディレクトリ内のassetsフォルダに入れることができます。
+	ただし、リソースのサイズ・個数に制限があるため、1MBを越える大きなファイルを多数使用する場合は、data.dpmに含めて使用してください。
 	</p>
 	<li>mes,print命令について</li>
 	<p>
-	現在のバージョンでは、mes及びprint命令で表示可能な文字列は半角英文字・記号のみになっています。
+	現在のバージョンでは、mes及びprint命令で表示可能な文字列は半角英文字・記号のみになっています。デフォルトで16x16ドットの固定フォントが用意されています。
 	</p>
 	<li>再生可能なサウンドファイルについて</li>
 	<p>
-	現在のバージョンは、プレビュー版となっておりサウンドの再生はサポートしていません。
+	拡張子が「.wav」「.mp3」「.ogg」「.aac」のファイルに対応しています。
+	.aacや.oggについては、すべてのフォーマットをサポートしていないので注意してください。
+	「.wav」「.mp3」については、Windows版を含めすべてのhsp3dishで幅広くサポートされている形式です。<br>
+	サウンドのファイルは必ずプロジェクトディレクトリ内のassetsフォルダに入れるようにしてください。data.dpmに含めるとOSのシステム側から読み取ることができません。
 	</p>
 	<li>画面の回転について</li>
 	<p>
-	画面の回転及び、アクティビティの復帰には現在のバージョンでは対応していません。
-	将来のバージョンでは対応する予定です。
 	画面の回転については、AndroidManifest.xmlを書き換えて抑制することが可能です。
 	</p>
 	<pre>
@@ -271,11 +309,9 @@
 	以下の機能は今後、上から順に高い優先度で追加される予定です。
 	</p>
 	<ul>
-	<li>サウンド再生のサポート</li>
+	<li>dialog命令によるダイアログ表示サポート</li>
 	<li>各種システム情報取得</li>
-	<li>画面の自動回転サポート</li>
 	<li>機種による画面サイズ動的変更のサポート</li>
-	<li>buttonを始めとする配置オブジェクトのサポート</li>
 	<li>サウンド再生時のボリュームコントロール</li>
 	<li>傾きセンサーの入力情報の取得</li>
 	<li>マルチタッチ入力情報の取得</li>
