--- a/trunk/package/win32/doclib/hsp3dish_ndk.htm
+++ b/trunk/package/win32/doclib/hsp3dish_ndk.htm
@@ -29,6 +29,7 @@
 		<li><a href="#SAMPLE">サンプルプロジェクト</a></li>
 		<li><a href="#COMP">ソースのコンパイル</a></li>
 		<li><a href="#RUNPROJ">実機への転送と実行(new)</a></li>
+		<li><a href="#DATAFILE">データファイルの準備(new)</a></li>
 		<li><a href="#SYSINFO">システム情報の取得(new)</a></li>
 		<li><a href="#EXECTASK">タスク(アクティビティ)呼び出し(new)</a></li>
 		<li><a href="#NOTICE">android版の注意事項、制限(new)</a></li>
@@ -216,6 +217,16 @@
 	「Logcat」ボタンを押して実行ログを表示させることが可能です。実機に転送して実行した際の、HSPからのエラーや初期化メッセージを確認することができます。
 	</p>
 
+	<h2 id="DATAFILE">データファイルの準備</h2>
+	<p>
+	スクリプトから参照されるデータファイルは2通りの方法で用意することができます。
+	1つは、「データファイル(dpm)」の項目で設定されているデータフォルダ(data.dpmを生成します)にファイルをコピーして使用する方法。基本的には、こちらの方法を使用してください。
+	ただし、サウンドファイル(wav,mp3など)は認識されないので注意してください。<br>
+	もう1つの方法は、プロジェクトディレクトリ内のassetsフォルダにファイルをコピーするというものです。サウンドのファイルは必ず、assetsフォルダに入れるようにしてください。
+	assetsフォルダには、画像ファイルを入れることも可能ですが、assetsフォルダのリソースのサイズ・個数に制限があるため、1MBを越える大きなファイルを多数使用する場合は、data.dpmのデータフォルダを使用してください。<br>
+	また、テキストファイルなどその他のデータファイルは必ず、data.dpmのデータフォルダを使用するようにしてください。
+	</p>
+
 	<h2 id="SYSINFO">システム情報の取得</h2>
 	<p>
 	sysinfo関数によりOSバージョン及び、デバイス名を取得することが可能になりました。
@@ -313,6 +324,7 @@
 	<li>各種システム情報取得</li>
 	<li>機種による画面サイズ動的変更のサポート</li>
 	<li>サウンド再生時のボリュームコントロール</li>
+	<li>日本語フォントの描画サポート</li>
 	<li>傾きセンサーの入力情報の取得</li>
 	<li>マルチタッチ入力情報の取得</li>
 	<li>http接続、ブラウザの呼び出しサポート</li>
