--- a/trunk/package/win32/doclib/hsp3dish_ndk.htm
+++ b/trunk/package/win32/doclib/hsp3dish_ndk.htm
@@ -136,12 +136,11 @@
 	プロジェクトのタイトル名となります。スペースを含まない英文字のみで指定してください。
 	</p>
 	<li>ID</li><br><p>
-	ビルドのターゲットIDを設定します。ターゲットIDは、SDKのAPIバージョンを指定するための番号になります。このIDは、「ID一覧...」ボタンを押すことで一覧を表示させることができます。
+	ビルドのターゲットIDを設定します。ターゲットIDは、SDKのAPIバージョンを指定するための番号になります。デフォルトで「"android-10"」(2.3.3)が指定されています。
 	</p>
 	<ul><img src="hsp3dish/s_and8.jpg"><br></ul>
 	<p>
-	HSP3Dishでは、Android 2.3.3(API Level10)以上が必要になります。
-	ターゲットとなる環境に合わせてIDを指定して下さい。上の例では、ID2がAndroid 2.3.3となります。
+	通常は、変更する必要はありません。他のターゲットIDが必要な場合は、「ID...」ボタンを含めず押して表示される一欄の中からIDを選んで入力してください。
 	</p>
 	<li>パッケージ名</li><br><p>
 	アプリを識別するための情報となります。パッケージ名には、他のパッケージ名と重複しない名称が求められます。
@@ -303,7 +302,7 @@
 	</p>
 	<li>画面の回転について</li>
 	<p>
-	画面の回転については、AndroidManifest.xmlを書き換えて抑制することが可能です。
+	画面の回転については、AndroidManifest.xmlを書き換えて制御することが可能です。
 	</p>
 	<pre>
         &ltactivity android:name="android.app.NativeActivity"
@@ -311,7 +310,14 @@
                   android:label="@string/app_name"&gt
 	</pre>
 	<p>
-	上で示した位置に、「android:screenOrientation=」の行を追加してください。
+	「android:screenOrientation=」の行で指定されているパラメーターが、"portrait"の場合は縦画面。"landscape"の場合は、横画面にそれぞれ固定されます。
+	現在のバージョンでは、実行中の画面自動回転には対応していません。必ず、縦・横画面を固定して動作する仕様で作成してください。
+	</p>
+	<li>データの保存について</li>
+	<p>
+	bsave、bload命令によってandroidストレージのデータファイル読み書きが可能です。
+	ファイル名が「/」で始まった場合は、フルパス指定となります。
+	androidストレージに保存する場合は、「/」を含めずファイル名(半角英文字)のみ指定するようにしてください。
 	</p>
 	</ul>
 
@@ -322,7 +328,6 @@
 	<ul>
 	<li>dialog命令によるダイアログ表示サポート</li>
 	<li>各種システム情報取得</li>
-	<li>機種による画面サイズ動的変更のサポート</li>
 	<li>サウンド再生時のボリュームコントロール</li>
 	<li>日本語フォントの描画サポート</li>
 	<li>傾きセンサーの入力情報の取得</li>
