--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -28,11 +28,13 @@
 		<li><a href="#DHPROJ">プロジェクトのビルド</a></li>
 		<li><a href="#SAMPLE">サンプルプロジェクト</a></li>
 		<li><a href="#COMP">ソースのコンパイル</a></li>
-		<li><a href="#RUNPROJ">実機への転送と実行(new)</a></li>
-		<li><a href="#DATAFILE">データファイルの準備(new)</a></li>
-		<li><a href="#SYSINFO">システム情報の取得(new)</a></li>
-		<li><a href="#EXECTASK">タスク(アクティビティ)呼び出し(new)</a></li>
-		<li><a href="#NOTICE">android版の注意事項、制限(new)</a></li>
+		<li><a href="#RUNPROJ">実機への転送と実行</a></li>
+		<li><a href="#DATAFILE">データファイルの準備</a></li>
+		<li><a href="#SYSINFO">システム情報の取得</a></li>
+		<li><a href="#EXECTASK">タスク(アクティビティ)呼び出し</a></li>
+		<li><a href="#SCALE">画面サイズのスケーリングについて(new)</a></li>
+		<li><a href="#RELEASE">リリースビルド(new)</a></li>
+		<li><a href="#NOTICE">android版の注意事項、制限</a></li>
 		<li><a href="#NEWVER">android版の更新予定</a></li>
 	</ol>
 
@@ -64,7 +66,7 @@
 	</p></ul>
 	<li>JDK(Java Development Kit) → <a href="http://java.sun.com/javase/ja/6/download.html" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
-	最新版のJDK (Java Development Kit)をインストールしてください。x86版、x64版どちらでも構いません。
+	JDK (Java Development Kit)をインストールしてください。x86版のJRE6+JDK6を推奨します。JDK7(ver1.7)は、apkファイルの署名が正しく行なわれないため推奨されません。
 	</p></ul>
 	<li>Android NDK（Native Development Kit）開発環境 → <a href="http://developer.android.com/sdk/ndk/index.html" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
@@ -255,6 +257,119 @@
 	たとえば、URIに「http://hsp.tv」を指定した場合は、規定のwebブラウザを開きURLとして表示します。
 	「tel:123456789」によりダイアラーを起動します。他にもOSがサポートする様々な呼び出し方法が存在します。
 	</p>
+
+	<h2 id="SCALE">画面サイズのスケーリングについて</h2>
+	<p>
+	最初に作成された解像度と異なるスクリーン上で実行する際に、スケーリング(拡大縮小)を適用することができます。<br>
+	jniフォルダ内のmain.cソースを編集することで、スケーリングに関する設定を行ないます。<br>
+	「static void engine_handle_cmd」で始まるソースコード(160行付近)にある以下の行を修正します。
+	</p>
+	<ul><pre>
+		//hgio_view( 480, 320 );
+		//hgio_scale( 1.0f, 1.0f );
+		//hgio_autoscale( 0 );
+	</pre></ul>
+	<p>
+	行頭が「//」になっている項目は、コメントアウトされ機能しません。
+	初期設定では、スケーリングの設定は行なっていませんので、上のようになっているはずです。<br>
+	</p>
+	<ul><pre>
+		hgio_view( 480, 320 );
+	</pre></ul>
+	<p>
+	まず、「//」を消去して、hgio_viewの行を有効にします。hgio_viewにより、もともとの画面サイズ(スクリプトが動作する解像度)を設定してください。上の例では、横サイズが480、縦サイズが320であることを示しています。
+	</p>
+	<ul><pre>
+		hgio_scale( 2.0f, 2.0f );
+	</pre></ul>
+	<p>
+	指定した倍率で表示を行ないたい場合は、hgio_scaleの行を有効にします。hgio_scaleにより、もともとの画面サイズに対して、指定した倍率で表示を行ないます。倍率を固定したい場合には、こちらを使用してください。通常は、hgio_autoscaleを使用することを推奨します。
+	</p>
+	<ul><pre>
+		hgio_autoscale( 0 );
+	</pre></ul>
+	<p>
+	画面のスケーリングを自動的に調整したい場合は、hgio_autoscaleの行を有効にします。hgio_autoscaleにより、描画した画面サイズを適切に拡大縮小し、現在のスクリーンに表示させます。<br>
+	カッコ内の数値で、スケーリングの方法をいくつか指定することができます。
+	</p>
+	<ul><pre>
+		0 : 画面全体に収まる最適な大きさ(縦横比は維持)
+		1 : X方向のサイズを基準に拡大縮小(縦横比は維持)
+		2 : Y方向のサイズを基準に拡大縮小(縦横比は維持)
+		3 : 縦横比は無視して画面全体に表示
+	</pre></ul>
+	<p>
+	スケーリングの設定は、起動時に行なわれます。スクリプト実行中に変更することはできません。
+	</p>
+
+	<h2 id="RELEASE">リリースビルド</h2>
+	<p>
+	HSP3Dish Helperからリリースビルドを行なうと、署名入りのapkファイルを生成することができます。これにより、Google Play(Android マーケット)に作成したアプリを登録することが可能になります。
+	公開するための、おおまかな手順は以下の通りです。
+	</p>
+	<ul>
+	<li>Googleに開発者登録を行なう(アプリを配布するためには、有償($25)の登録が必要になります)</li>
+	<li>署名のための証明書(keystore)を作成する</li>
+	<li>HSP3Dish Helperでリリースビルドを行なう</li>
+	<li>Android Developer Consoleからアップロードする</li>
+	</ul>
+	<p>
+	順を追って説明していきます。
+	</p>
+	<ul>
+	<li>Googleに開発者登録を行なう</li>
+	<pre>	<a href="http://developer.android.com/">http://developer.android.com/</a></pre>
+	<ul>
+	<p>
+	androidのデベロッパーページを開き、「公開」(publish)の詳細ページを選択します。
+	Googleアカウントでサインインを行ない、開発者情報を適切に入力して登録を行ないます。<br>
+	(電話番号の入力は、国番号を含めて行ないます。日本の場合は先頭に「81」を付け、市外局番の先頭「0」を省くのが決まりです。「03-1234-5678」の場合は、「+81-3-1234-5678」となります。)<br>
+	次に、Google Checkoutを利用して登録の決済を行ないます。クレジットカード等を使って支払いを行なうことができます。<br>
+	すべて終了すると、Android Developer Consoleのページにアクセスできるようになります。
+	有料アプリを登録する場合は、さらに銀行の口座などのアカウント情報を設定する必要があります。
+	</p>
+	</ul>
+	<li>署名のための証明書(keystore)を作成する</li>
+	<ul>
+	<br><p>
+	まず、HSP3Dish Helperを起動し、androidタブの新規プロジェクトページを開きます。
+	次に、「KEY作成」ボタンを押します。(キー名は、「hspapp」のままで問題ありません)<br>
+	コマンドプロンプトの画面が開き、以下の項目について情報を求めてくるのでキーボードから入力してください。すべて半角英文字で入力することを推奨します。
+	</p>
+	<pre>	・パスワード
+	・パスワード再入力
+	・姓名
+	・組織単位名(部門・部署名)
+	・組織名(会社・団体名)
+	・都市名または地域名(市町村名)
+	・州名または地方名(都道府県名)
+	・国番号(日本の場合は81を入力)
+	・よろしいですか?(「y」を入力)
+	・鍵パスワード(Enterを入力)</pre>
+	<p>
+	以上で、「hspapp.keystore」ファイルがプロジェクトフォルダのルートに作成されます。
+	このファイルは、アプリ署名のために必要なので、削除しないで大切に保管しておいてください。
+	</p>
+	</ul>
+	<li>HSP3Dish Helperでリリースビルドを行なう</li>
+	<br><p>
+	HSP3Dish Helperの、androidタブで既存プロジェクトページを開きます。
+	ビルドしたいプロジェクトを選択し、通常のビルドを行なって正常に動作することを確認してください。<br>
+	次に「リリース」ボタンを押してください。アプリのリリースビルドを実行し、署名を行ないます。
+	この時、コマンドプロンプトの画面が開き、パスワードを求められるので「hspapp.keystore」を作成した時に入力したパスワードを入力してください。<br>
+	以上で、プロジェクトのbinフォルダに「プロジェクト名.apk」のファイルが生成されます。
+	</p>
+	<li>Android Developer Consoleからアップロードする</li>
+	<br><p>
+	Android Developer Consoleのページで、新規のアプリを追加し、生成された「プロジェクト名.apk」のファイルをアップロードしてください。
+	(プロジェクト名-debug.apkや、プロジェクト名-release.apkのファイルは署名されていませんので、無効になります)<br>
+	Google Playに登録を行なう場合は、紹介文やスクリーンショット、サポート情報などを設定する必要があります。<br>
+	アップロードしたapkファイルをactivate(有効化)し、publish(公開)ボタンを押すことで、アプリを一般に公開します。(実際に公開されるまで、数時間の遅延があります)<br>
+	公開されている情報は、Android Developer Consoleから、いつでも修正を行なうことができます。
+	ファイルを更新する場合は、再度リリースビルドを行なって、apkファイルを差し替えた後にactivate(有効化)してください。
+	ただし、更新を行なうためには、バージョン番号を上げる必要があります。プロジェクトが使用している「AndroidManifest.xml」ファイルの、android:versionCode、android:versionName項目の数値を更新してから、リリースビルドを行なうようにしてください。
+	</p>
+	</ul>
 
 
 	<h2 id="NOTICE">android版の注意事項、制限</h2>
