--- a/trunk/package/win32/doclib/hsp3dish_ios.htm
+++ b/trunk/package/win32/doclib/hsp3dish_ios.htm
@@ -27,12 +27,11 @@
 		<li><a href="#MAKEPROJ">XCode4プロジェクトの作成</a></li>
 		<li><a href="#ADDHSP">HSP3Dish関連ファイルの登録</a></li>
 		<li><a href="#RUNPROJ">HSP3Dishの実行と設定</a></li>
-		<li><a href="#UPDATE11">iHSP11の更新</a></li>
-		<li><a href="#UPDATE12">iHSP12の更新</a></li>
-		<li><a href="#UPDATE13">iHSP13の更新</a></li>
-		<li><a href="#UPDATE14">iHSP14の更新</a></li>
-		<li><a href="#UPDATE15">iHSP15の更新</a></li>
-		<li><a href="#UPDATE16">iHSP16の更新(new)</a></li>
+		<li><a href="#BSAVE">bsave命令によるユーザーデータ保存</a></li>
+		<li><a href="#RESOURCE">Resourceフォルダのデータについて</a></li>
+		<li><a href="#EXECURL">exec命令のサポートについて</a></li>
+		<li><a href="#SENSOR">加速度センサーのサポートについて</a></li>
+		<li><a href="#DIALOG">dialog命令のサポートについて</a></li>
 		<li><a href="#NOTICE">iOS版の注意事項、制限</a></li>
 		<li><a href="#NEWVER">iOS版の更新予定</a></li>
 	</ol>
@@ -70,7 +69,7 @@
 	iOSフォルダには、HSP3Dishランタイム及びxcode用のサンプルプロジェクトが含まれています。
 
 	<ul>
-	<li>iHSP16フォルダ - HSP3Dishランタイム本体</li>
+	<li>iHSP17フォルダ - HSP3Dishランタイム本体</li>
 	<li>hspprojフォルダ - HSP3Dishサンプル(hsplogo.hsp)</li>
 	<li>blockフォルダ - ブロック崩しサンプル(block3.hsp)</li>
 	<li>gcubeフォルダ - iPad用、d3module使用サンプル(gcube.hsp)</li>
@@ -123,14 +122,14 @@
 
 	<h2 id="ADDHSP">HSP3Dish関連ファイルの登録</h2>
 	<p>
-	作成されたプロジェクトのフォルダと同じ階層に、「iHSP16」フォルダを配置してください。
+	作成されたプロジェクトのフォルダと同じ階層に、「iHSP17」フォルダを配置してください。
 	「iHSPxx」フォルダはアーカイブ内のiOSフォルダに同梱されています。
 	</p>
 	<img src="hsp3dish/s_menu.jpg" style="float:right;">
 	<img src="hsp3dish/s_folder.jpg"><br>
 	<p>
 	XCode上でプロジェクトに必要なファイルを追加してください。<br>
-	Fileメニューから、「Add Files to～」を選択し、「iHSP16」のフォルダ(下層も含む)を追加(Add)します。<br>
+	Fileメニューから、「Add Files to～」を選択し、「iHSP17」のフォルダ(下層も含む)を追加(Add)します。<br>
 	さらに、Windows上で作成されたCソースファイル(拡張子が.cppのファイル)を追加(Add)します。<br>
 	</p>
 	<p>
@@ -156,7 +155,7 @@
 	</ul>
 	<img src="hsp3dish/s_plist.jpg"><br>
 	<p>
-	アイコンやデータファイル(画像やサウンド)がある場合は、「resource」フォルダを作成してプロジェクトに追加(Add)してください。
+	アイコンやデータファイル(画像やサウンド)がある場合は、「Resource」フォルダを作成してプロジェクトに追加(Add)してください。(サンプルプロジェクトのResourceフォルダなどを参考にしてみてください)
 	</p>
 	<img src="hsp3dish/s_resource.jpg"><br>
 
@@ -182,10 +181,10 @@
 	<br>
 	<p>
 	冒頭の「#import "AppDelegate.h"」の下に以下のコードを追加してください。<br>
-	(「iHSP16」への相対パス指定によりクラス宣言を読み込んでいます)
+	(「iHSP17」への相対パス指定によりクラス宣言を読み込んでいます)
 	</p>
 	<pre>
-	    #import "../../iHSP16/Classes/HspView.h"
+	    #import "../../iHSP17/Classes/HspView.h"
 	</pre>
 	<p>
 	次に「- (BOOL)application:～{」のあるブロック内の「// Override point for customization after application launch.」行の直前に以下のコードを追加してください。<br>
@@ -260,6 +259,40 @@
 	Windows上など加速度センサーが使用できない環境では、0.0が取得されます。
 	</p>
 
+	<pre>
+	    [view dispViewX:320 Y:480];
+	</pre>
+	<p>
+	スクリプトが動作する解像度(想定される解像度)を設定することができます。
+	画面のスケーリング機能(dispAutoScale、dispScaleX)を使用する場合には、必ず設定するようにしてください。上の例では、横サイズが320、縦サイズが480であることを示しています。
+	</p>
+
+	<pre>
+	    [view dispScaleX:2.0f Y:2.0f];
+	</pre>
+	<p>
+	もともとの画面サイズに対して、指定した倍率で表示を行ないます。倍率を固定したい場合には、こちらを使用してください。画面サイズに合わせて自動設定する場合は、dispAutoScaleを使用してください。
+	</p>
+
+	<pre>
+	    [view dispAutoScale:0];
+	</pre>
+	<p>
+	描画した画面サイズを適切に拡大縮小し、現在のスクリーンに表示させます。<br>
+	カッコ内の数値で、スケーリングの方法をいくつか指定することができます。
+	</p>
+	<ul><pre>
+		0 : 画面全体に収まる最適な大きさ(縦横比は維持)
+		1 : X方向のサイズを基準に拡大縮小(縦横比は維持)
+		2 : Y方向のサイズを基準に拡大縮小(縦横比は維持)
+		3 : 縦横比は無視して画面全体に表示
+	</pre></ul>
+	<p>
+	スケーリングの設定は、起動時に行なわれます。スクリプト実行中に変更することはできません。
+	</p>
+
+	<br>
+
 	<p>
 	タスク切替時には、HSPの実行を停止し処理を軽減させることを推奨します。
 	作成した「AppDelegate.m」ファイルの、applicationWillResignActive内に以下を追加してください。
@@ -289,12 +322,7 @@
 	<img src="hsp3dish/s_iphone.jpg"><br>
 
 
-	<h2 id="UPDATE11">iHSP11の更新</h2>
-	<p>
-	iOS版ランタイムver1.1から、以下の機能が追加されています。
-	</p>
-	<ul>
-	<li>bsave命令によるユーザーデータ保存</li><br>
+	<h2 id="BSAVE">bsave命令によるユーザーデータ保存</h2>
 	<p>
 	bsave命令により、変数バッファの内容をユーザーデータとして保存することができます。
 	(iOSではフォルダの指定はできませんので、ファイル名だけを指定するようにしてください。)<br>
@@ -303,61 +331,17 @@
 	ユーザーデータは、アプリケーションごとに異なる領域に保存されます。異なるアプリケーション間でデータを共有することはできません。
 	また、bsave命令では、ファイルのオフセット指定(ファイルの一部だけを書き換える機能)は無効になっていますので注意してください。
 	</p>
-	<li>gfilter命令対応</li><br>
-	<p>
-	Windows版(3.3a2)で追加されたgfilter命令をiOSでもサポートしました。描画時のフィルタリングモードを設定することができます。
-	</p>
-	<ul><pre>
-	マクロ名        値      内容
-	-------------------------------------------
-	FILTER_NONE     0       補間なし(NEAREST)
-	FILTER_LINEAR   1       直線補間(LINEAR)
-	</pre></ul>
-	<p>
-	使用できる補間モードは、0(補間なし)と1(リニア補間)のみです。
-	標準では、補間なし(NEAREST)が設定されています。スクリプト中で「gfilter 1」のように設定した後の描画命令で、
-	フィルタリングモードが反映されます。
-	</p>
-	</ul>
 
-
-	<h2 id="UPDATE12">iHSP12の更新</h2>
+	<h2 id="RESOURCE">Resourceフォルダのデータについて</h2>
 	<p>
-	iOS版ランタイムver1.2では大幅な機能の追加は行なっていません。
-	hsp3cnvの更新に伴う対応により、スクリプト変換時の互換性が向上しています。
+	スクリプトから読み込まれる画像や音声データのファイルは、Resourceフォルダを作成して
+	プロジェクトに追加することで読み込み可能になります。<br>
+	リソースに、data.dpmファイルを追加することにより、複数ファイルがパックされたデータにアクセスすることが可能です。
+	data.dpmファイルは、Windows上のHSP開発システム上で作成可能です。詳しくは、dpmファイル、パックファイル等の項目を参照してください。
+	また、HSP3Dishでは、音声ファイル(wav、mp3など)やアイコンなどiOSのシステムがアクセスするファイルは含めることができませんのでご注意下さい。
 	</p>
 
-
-	<h2 id="UPDATE13">iHSP13の更新</h2>
-	<p>
-	iOS版ランタイムver1.3では以下の更新を行なっています。
-	</p>
-	<ul>
-	<li>画像ファイル読み込みライブラリの変更</li><br>
-	<p>
-	画像ファイル読み込みを内部API(QuartzCore)からandroidと同様のstb_imageに変更しました。
-	これにより、取り扱うことのできる画像ファイルの種類が変更されています。<br>
-	また、従来発生していたPNGファイルのαチャンネル値が正しく反映されない不具合が修正されます。
-	</p>
-	<li>dpmファイルのサポート</li><br>
-	<p>
-	リソースにdata.dpmファイルを追加することにより、複数ファイルがパックされたデータにアクセスすることが可能になりました。
-	ただし、音声ファイルやアイコンなどiOSのシステムがアクセスするファイルは含めることができませんのでご注意下さい。
-	</p>
-	<li>命令サポートの追加</li><br>
-	<p>
-	ランタイムの更新により、grotate、gsquare、gradf、setreq、getreq命令がサポートされます。
-	また、不具合修正によりスクリプト変換時の互換性が向上しています。
-	</p>
-	</ul>
-
-
-	<h2 id="UPDATE14">iHSP14の更新</h2>
-	<p>
-	iOS版ランタイムver1.4では以下の更新を行なっています。
-	</p>
-	<ul>
-	<li>exec命令のサポート</li><br>
+	<h2 id="EXECURL">exec命令のサポートについて</h2>
 	<p>
 	exec命令でURLスキームを指定することにより、Safariブラウザを指定したURLで開くことができます。
 	</p>
@@ -368,59 +352,19 @@
 	上の例では、「hsp.tv」のサイトを開きます。
 	Windowsの時と同様に、第2パラメーターに16(関連付けアプリケーション実行)を指定するようにしてください。
 	</p>
-	<li>dialog命令のサポート</li><br>
+
+	<h2 id="DIALOG">dialog命令のサポートについて</h2>
 	<p>
 	システムによるダイアログ表示をサポートしています。
 	タイプ0～3のみをサポートしています。ただし、Windows版のような警告アイコン等は表示されません。
 	「はい」「いいえ」の選択肢を選んだ場合は、Windows版と同様の結果がシステム変数statに代入されます。
 	</p>
-	</ul>
 
-	<h2 id="UPDATE15">iHSP15の更新</h2>
+	<h2 id="SENSOR">加速度センサーのサポートについて</h2>
 	<p>
-	iOS版ランタイムver1.5では以下の更新を行なっています。
+	iOS版では、加速度センサーをサポートしています。AppDelegate.mに必要な初期化を追加する必要があります。詳しくは、<a href="#RUNPROJ">HSP3Dishの実行と設定</a>をご覧ください。<br>
+	現在は、Windows版では加速度センサーと同様の値を読み取ることができないため、実行中のランタイムに応じて、テストを行なうコードを作成してテストを行なうようにしてください。
 	</p>
-	<ul>
-	<li>wait,await命令の時間待ち</li><br>
-	<p>
-	スクリプト中のwait,await命令で指定された時間待ちを正しく反映するように修正しました。
-	ただし、実行のタイミングはあくまでも [view startFrame:60] で指定されたフレームレートに従いますので、それ以上のレートにはなりません。<br>
-	基本的には、フレームレートは60fpsを使用すれば問題ありません。
-	</p>
-	<li>不具合の修正</li><br>
-	<p>
-	いくつかのマイナーな不具合修正を行なっています。
-	ローカルストレージ(ユーザーデータ)のbsave,bloadでオフセット値が使用できるようになったほか、mes命令のカレントポジション移動、line命令の座標ずれなどが修正されています。
-	</p>
-	</ul>
-
-	<h2 id="UPDATE16">iHSP16の更新</h2>
-	<p>
-	iOS版ランタイムver1.6では以下の更新を行なっています。
-	</p>
-	<ul>
-	<li>button命令のサポート</li><br>
-	<p>
-	button命令によるボタン処理をサポートしました。
-	ボタンの描画はredraw命令により描画タイミングが指定された時に実行されます。
-	stop命令などでタスクが停止している状態では、ボタンの描画が行なわれませんので注意してください。
-	</p>
-	<li>sysinfo関数のサポート</li>
-	<li>横画面描画のサポート</li>
-	<li>加速度センサーのサポート</li><br>
-	<p>
-	画面を回転して表示するための機能、及び加速度センサーのサポートを追加しています。
-	AppDelegate.mに必要な初期化を追加する必要があります。詳しくは、<a href="#RUNPROJ">HSP3Dishの実行と設定</a>をご覧ください。<br>
-	また、sysinfo関数によりOSバージョン及び、デバイス名を取得することが可能になりました。
-	sysinfo(0)で、「iOS 5.1.1」のような文字列を取得することができます。これにより、ソース中で現在動作しているOSやバージョンを判別可能です。<br>
-	sysinfo(2)で、「iPhone」のようなデバイス名を取得することができます。現在、sysinfo関数の他の項目はサポートされていません。
-	</p>
-	<li>不具合の修正</li><br>
-	<p>
-	いくつかのマイナーな不具合修正を行なっています。
-	await命令がver1.5よりも正確な待ち時間で動作するよう修正しました。
-	</p>
-	</ul>
 
 	<h2 id="NOTICE">iOS版の注意事項、制限</h2>
 	<ul>
@@ -462,7 +406,7 @@
 	iOS版では、end命令によるアプリ終了は行なわれません(stop命令と同様の処理になります)。
 	iOSのアプリ製作ガイドラインでは、プログラム自身による終了を行なわないよう求めています。<br>
 	<a href="https://developer.apple.com/library/ios/#qa/qa2008/qa1561.html" target="_blank">https://developer.apple.com/library/ios/#qa/qa2008/qa1561.html</a><br>
-	Windowsと異なり、iOS上では、アプリを終了するという動作のないように作ることが
+	Windowsやandroidとは異なり、iOS上では、アプリを終了するという動作のないように作ることが
 	求められるので、注意をしてください。
 	</p>
 	</ul>
