HSP3Dish関連の細かい調整

--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -32,6 +32,7 @@
 		<li><a href="#EXECURL">exec命令のサポートについて</a></li>
 		<li><a href="#SENSOR">加速度センサーのサポートについて</a></li>
 		<li><a href="#DIALOG">dialog命令のサポートについて</a></li>
+		<li><a href="#RELEASE">AppStoreへの登録について</a></li>
 		<li><a href="#NOTICE">iOS版の注意事項、制限</a></li>
 		<li><a href="#NEWVER">iOS版の更新予定</a></li>
 	</ol>
@@ -366,6 +367,33 @@
 	現在は、Windows版では加速度センサーと同様の値を読み取ることができないため、実行中のランタイムに応じて、テストを行なうコードを作成してテストを行なうようにしてください。
 	</p>
 
+	<h2 id="RELEASE">AppStoreへの登録について</h2>
+	<p>
+	HSP3Dishを使用してアプリを作成した場合でも、通常のアプリ開発と同じ手順でAppStoreへの登録が可能です。<br>
+	AppStoreへ登録することにより、あなた以外のユーザーがアプリをダウンロードして実行させることができるようになります。また、有料アプリとして設定すれば、AppStore上での販売も可能になります。
+	<br>
+	既にDeveloperの登録が済んでいる場合の、おおまかな流れは以下の通りです。
+	</p>
+	<ul>
+	<li>「iOS Provisioning Portal」サイトからアプリで使用するためのAppIDを作成する</li>
+	<li>Distribution Provisioning Profileを作成し、設定ファイルをダウンロードする</li>
+	<li>xcodeを実行している環境に作成したDistribution用のProvisioning Profileを登録する</li>
+	<li>xcode上のプロジェクトで、Build Settings内のCode Signingに配布用のProfileを設定する</li>
+	<li>Releaseのモードでビルドを行ない、エラーが出ないことを確認する</li>
+	<li>「iTunes Connect」サイトでアプリの登録作業を行なう。アプリ名やスクリーンショット等を設定し、ステータスを「Waiting For Upload」の状態にする</li>
+	<li>xcode上から、「Product」→「Archive」のメニューを実行、アップロード用のファイルを作成する</li>
+	<li>Organizerのウインドウが自動的に開くので、ファイルをValidate(有効化)する</li>
+	<li>Validateに成功した場合は、「Submit」を選択しサーバーにアップロードを行なう</li>
+	<li>正常にアップロードされた後、Appleによる審査が行なわれる。経過は「iTunes Connect」サイトで確認可能</li>
+	<li>無事に審査通過すると、AppStoreにアプリが公開されます</li>
+	</ul>
+	<p>
+	登録のための手順は、非常に煩雑なため最初からすべてうまくいくことは稀です。
+	Appleの公開しているドキュメントや、ネット上の資料などを参考にしながら、登録の方法を学んでいってください。<br>
+	既に、HSP3Dishによる作品が少しずつAppStoreにも登場してきています。
+	全世界のマーケットを対象に作品を公開することができますので、是非あなたもチャレンジしてみてください。
+	</p>
+
 	<h2 id="NOTICE">iOS版の注意事項、制限</h2>
 	<ul>
 	<li>入力可能な情報</li>
@@ -400,6 +428,15 @@
 	圧縮された音声ファイルについては、mmload命令で読み込んだ時点ですべての波形がメモリに展開されるため、多くの音楽を同時に読み込むことは推奨されません。
 	「.caf」「.aac」形式は、Mac及びiOSでサポートされている形式です。
 	「.wav」「.mp3」は、Windows版を含めすべてのhsp3dishで幅広くサポートされている形式です。
+	</p>
+	<li>mes,print命令について</li>
+	<p>
+	mes,print命令による文字列描画は、非常にコスト(実行時間)のかかる処理のため多くの文字列を一度に書き換えることは推奨されません。<br>
+	文字列の描画は、システム内部でキャッシュを持っており以前に描画した内容は高速に表示されますが、
+	毎フレームごとに異なる文字列を多く表示するような処理は、高い負荷がかかることをご了承ください。<br>
+	表示する文字が英文字のみの場合は、あらかじめ自前で文字データを用意して使用するなどの工夫で、
+	良いパフォーマンスを得ることができます。(hsp3dishサンプルのtest1.hspなどを参考にしてみてください)
+
 	</p>
 	<li>アプリの終了について</li>
 	<p>
