--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -394,6 +394,11 @@
 	<li>PIC (Softimage PIC)</li>
 	</ul>
 	</p>
+	<li>gmodeの制約について</li>
+	<p>
+	現在のバージョンでは、gmode 6(色減算)はサポートされていません。
+	これは、android(NDK)版のみの制約事項です。将来のバージョンでは、対応を行なっていく予定です。
+	</p>
 	<li>画像サイズについて</li>
 	<p>
 	celload、picload命令などで読み込まれる画像の縦・横サイズが、2048を越えるものについては、正しく扱えない機種もあるので、推奨されません。
@@ -406,7 +411,9 @@
 	</p>
 	<li>mes,print命令について</li>
 	<p>
-	現在のバージョンでは、mes及びprint命令で表示可能な文字列は半角英文字・記号のみになっています。デフォルトで16x16ドットの固定フォントが用意されています。
+	現在のバージョンでは、mes及びprint命令で表示可能な文字列は半角英文字・記号のみになっています。デフォルトで16x16ドットの固定フォントが用意されています。<br>
+	日本語を含むすべての文字を表示する場合は、あらかじめ画像データとして用意するなどの対応が必要になります。<br>
+	これは、android(NDK)版のみの制約事項です。将来のバージョンでは、対応を行なっていく予定です。
 	</p>
 	<li>再生可能なサウンドファイルについて</li>
 	<p>
