--- a/trunk/package/win32/doclib/hsp3dish_prog.htm
+++ b/trunk/package/win32/doclib/hsp3dish_prog.htm
@@ -184,7 +184,8 @@
 	</pre>
 	<p>
 	アルファチャンネルは、PNG形式などの画像データに付加される情報です。
-	通常のHSPにあるRGBが0の場合に透過するモードや、特定の色コードを透過するモードは選択できませんので注意してください。
+	通常のHSPにあるRGBが0の場合に透過するモードや、特定の色コードを透過するモードは選択できませんので注意してください。<br>
+	<b>現在のバージョンでは、android(NDK)ランタイムにおいてgmode 6(色減算)はサポートされませんのでご注意ください。</b>
 	</p>
 
 	<h2 id="GFILTER">gfilter命令について</h2>
