ドキュメントの修正

--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -73,7 +73,7 @@
 	<li>iHSP17フォルダ - HSP3Dishランタイム本体</li>
 	<li>hspprojフォルダ - HSP3Dishサンプル(hsplogo.hsp)</li>
 	<li>blockフォルダ - ブロック崩しサンプル(block3.hsp)</li>
-	<li>gcubeフォルダ - iPad用、d3module使用サンプル(gcube.hsp)</li>
+	<li>gcubeフォルダ - iPad用、d3module使用サンプル(xsample_gcube.hsp)</li>
 	</ul>
 
 	<br>
